--- a/yougou/WebContent/WEB-INF/web.xml
+++ b/yougou/WebContent/WEB-INF/web.xml
@@ -9,4 +9,13 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+   <!-- 引用数据源 -->
+   <resource-ref>
+      <res-ref-name>jdbc/mysql</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>
+  
+  
 </web-app>
