洪军：新页面找回密码2的添加

--- a/yougou/.settings/org.eclipse.core.resources.prefs
+++ b/yougou/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/base_html/findpassword-two.jsp=UTF-8
 encoding//WebContent/base_html/login.jsp=UTF-8
 encoding//WebContent/base_html/phonelogin.jsp=UTF-8
 encoding//WebContent/base_html/pro_center.jsp=UTF-8
