--- a/yougou/.settings/org.eclipse.core.resources.prefs
+++ b/yougou/.settings/org.eclipse.core.resources.prefs
@@ -11,3 +11,4 @@ encoding//WebContent/power_html/collect_order.jsp=UTF-8
 encoding//WebContent/power_html/login_cart.jsp=UTF-8
 encoding//WebContent/power_html/order_pay.jsp=UTF-8
 encoding//WebContent/power_html/order_submit.jsp=UTF-8
+encoding/<project>=UTF-8
