--- a/yougou/.settings/org.eclipse.core.resources.prefs
+++ b/yougou/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
+encoding//WebContent/backstage/backstage_delivered.jsp=UTF-8
+encoding//WebContent/backstage/backstage_goods.jsp=UTF-8
+encoding//WebContent/backstage/backstage_login.jsp=UTF-8
+encoding//WebContent/backstage/backstage_order.jsp=UTF-8
+encoding//WebContent/backstage/baskstage_manage.jsp=UTF-8
 encoding//WebContent/base_html/findpassword-two.jsp=UTF-8
 encoding//WebContent/base_html/login.jsp=UTF-8
 encoding//WebContent/base_html/phonelogin.jsp=UTF-8
