--- a/yougou/WebContent/WEB-INF/web.xml
+++ b/yougou/WebContent/WEB-INF/web.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>yougou</display-name>
+  
+  
+  <!-- 监听器 -->
+  <listener>
+    <listener-class>com.yougou.web.listener.singleListener</listener-class>
+  </listener>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,9 +16,44 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
   <resource-ref>
     <res-ref-name>jdbc/mysql</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+  
+  
+  <!-- 权限页面过滤器 -->
+   <filter>
+  	<filter-name>powerFilter</filter-name>
+  	<filter-class>com.yougou.web.filter.powerFilter</filter-class>
+  </filter>
+  
+  
+  
+ <filter>
+  	<filter-name>EncondingFilter</filter-name>
+  	<filter-class>com.yougou.web.filter.EncodingFilter</filter-class>
+  	<init-param>
+  		<param-name>oldEncoding</param-name>
+  		<param-value>ISO8859-1</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>newEncoding</param-name>
+  		<param-value>UTF-8</param-value>
+  	</init-param>
+  </filter>
+  
+  
+  <filter-mapping>
+  	<filter-name>EncondingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+  	<filter-name>powerFilter</filter-name>
+  	<url-pattern>/power_html/*</url-pattern>
+  	<dispatcher>REQUEST</dispatcher>
+  	<dispatcher>FORWARD</dispatcher>
+  </filter-mapping>
 </web-app>
